spade-tests/src/snapshots/spade_tests__auto_traits__generic_type_is_not_data_if_generic_is_not_data.snap
---
source: spade-tests/src/auto_traits.rs
---
struct A<T> {
    x: bool,
    y: T,
}

fn needs_data<T: Data>(x: T) {}

fn test1(x: inv bool) {
    needs_data(x)
}


error: Argument type mismatch. Expected core::marker::Data got inv bool
  ┌─ testinput:9:16
  │
6 │ fn needs_data<T: Data>(x: T) {}
  │                  ---- Required because of the trait bound specified here
  ·
9 │     needs_data(x)
  │                ^ inv bool does not implement core::marker::Data
